[metadata]
name = yk-totp
version = 0.2.2

description = A CLI tool to generate TOTP values from a password protected YubiKey by storing the password in the system-protected keyring.
# long_description = see setup.py
long_description_content_type = text/markdown

license = BSD 3-Clause License
license_file = LICENSE

author = Christian Mäder
author_email = yktotp@cimnine.ch
url = https://github.com/cimnine/yk-totp

classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python :: 3
  Topic :: Security
  Topic :: Software Development
  Topic :: System :: Operating System
  Topic :: Utilities

[options]
packages = yktotp

install_requires =
  click >= 7.1.2
  keyring >= 21.8.0
  yubikey-manager >= 4.0.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
  yk-totp = yktotp.__main__:cli
